@@ -11,7 +11,6 @@ Features:
     * bintube.com
     * dognzb.com
     * fanzub.com
-    * nzb.su
     * nzbclub.com
     * nzbindex.com (nzbindex.nl)
     * nzbsrus.com
