@@ -164,14 +164,6 @@ this.manifest = {
 		{
 			'tab': 'Providers',
 			'group': '1-Click NZB downloading',
-			'name': 'provider_nzbdotsu',
-			'type': 'checkbox',
-			'sync': true,
-			'label': 'nzb.su'
-		},
-		{
-			'tab': 'Providers',
-			'group': '1-Click NZB downloading',
 			'name': 'provider_nzbx',
 			'type': 'checkbox',
 			'sync': true,
